--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~primeicons/primeicons.css';
 @import '~primeng/resources/primeng.min.css';
-@import '~primeng/resources/themes/bootstrap4-light-blue/theme.css'
+@import '~primeng/resources/themes/bootstrap4-light-blue/theme.css';
+@import "~bootstrap/dist/css/bootstrap.css";
