--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,7 @@
 <p>header works!</p>
+<div class="main">
+  <img src="../../../assets/images/logo.png" alt="logo">
+  <span>Whisky Exchange</span>
+  <input pInputText placeholder="Search" name="search" >
+  <button>search</button>
+</div>
