--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,11 @@
-<router-outlet></router-outlet>
-<app-register></app-register>
+<div>
+  <header>
+      <app-header></app-header>
+  </header>
+  <main>
+      <router-outlet></router-outlet>
+  </main>
+  <footer>
+      <!-- <app-footer></app-footer> -->
+  </footer>
+</div>
