--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -1,1 +1,8 @@
-<p>about-us works!</p>
+<div class="image">
+  <img src={{imageUrl}} alt="whisky-experience">
+  </div>
+  <div class="promotxt">
+    Our Tasting Room seats 24 people comfortably in a classroom style setting.
+    30-40 can be accomodated in a freestyle setting.
+    Special pricing will be made avaialble to guests that evening.
+  </div>
