--- a/src/app/components/store-info/store-info.component.html
+++ b/src/app/components/store-info/store-info.component.html
@@ -1,1 +1,13 @@
-<p>store-info works!</p>
+<div class="image">
+  <img src='../../../assets/images/scotch-whisky-experience.jpg' alt="Logo">
+  </div>
+  <div class="promotxt">
+    We are your full-service Whiskey Marketing & Store Online Agency.
+    ✓ Mobile App Marketing
+    ✓ Online, face-to-face or Phone
+    ✓ Speed of service
+  </div>
+  <div class="storeinfo">
+    Store Total Orders: {{storeOrders}}
+    Store Total Products: {{storeProducts}}
+  </div>
