--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
-<p>header works!</p>
 <div class="main">
   <img src="../../../assets/images/logo.png" alt="logo">
   <span>Whisky Exchange</span>
   <input pInputText placeholder="Search" name="search" >
   <button>search</button>
+  <span>📞 054-565-5555</span>
 </div>
