--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,1 +1,4 @@
 <p>products works!</p>
+<div class="list">
+  <app-single-products *ngFor="let product of _products.productsArr" [product]="product"></app-single-products>
+  </div>
