--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -4,4 +4,5 @@
 
   <input pInputText placeholder="Password" name="password" [(ngModel)]="formData.password">
 
+  <button pButton class="mt-4" type="button" label="Log In" (click)="logIn()"></button>
 </form>
